GH-5058: fix more tests